After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722525 - #include <glib.h> is missing in src/tracker-ioprio.h
#include <glib.h> is missing in src/tracker-ioprio.h
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
unspecified
Other FreeBSD
: Normal normal
: ---
Assigned To: tracker-general
: 722628 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-01-19 06:36 UTC by Ting-Wei Lan
Modified: 2014-01-21 08:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add #include <glib.h> (313 bytes, patch)
2014-01-19 06:39 UTC, Ting-Wei Lan
none Details | Review
tracker-ioprio: Fix includes (1.30 KB, patch)
2014-01-20 11:44 UTC, Debarshi Ray
none Details | Review
tracker-ioprio, tracker-sched: Fix includes (2.14 KB, patch)
2014-01-20 11:49 UTC, Debarshi Ray
committed Details | Review

Description Ting-Wei Lan 2014-01-19 06:36:15 UTC
src/tracker-ioprio.h use G_BEGIN_DECLS and G_END_DECLS, so glib.h should be included.
Comment 1 Ting-Wei Lan 2014-01-19 06:39:05 UTC
Created attachment 266643 [details] [review]
Add #include <glib.h>
Comment 2 Debarshi Ray 2014-01-20 08:12:56 UTC
The file is copied from tracker and we do not want to maintain a fork of it. Reassigning, so that the original source is fixed.

Does cause a build failure in FreeBSD?
Comment 3 Ting-Wei Lan 2014-01-20 08:36:48 UTC
This does cause a build failure in FreeBSD.

This does not cause problem in tracker because tracker-ioprio.c includes libtracker-common/tracker-log.h, which includes glib.h. However, this include is removed in gnome-online-miners, so including glib.h is required.
Comment 4 Martyn Russell 2014-01-20 10:41:42 UTC
(In reply to comment #1)
> Created an attachment (id=266643) [details] [review]
> Add #include <glib.h>

Patch looks good to me.

(In reply to comment #3)
> This does cause a build failure in FreeBSD.
> 
> This does not cause problem in tracker because tracker-ioprio.c includes
> libtracker-common/tracker-log.h, which includes glib.h. However, this include
> is removed in gnome-online-miners, so including glib.h is required.

It's unclear to me if you're saying we should or shouldn't use this patch. In one line you say it causes a build failure on FreeBSD, on another you say it's not a problem in Tracker?
Comment 5 Ting-Wei Lan 2014-01-20 11:12:08 UTC
This bug report is moved from gnome-online-miners to tracker because it is related to the file copy from trakcer. The file does not cause error in tracker, but it cause error in gnome-online-miners.

I think we should use this patch.
Comment 6 Debarshi Ray 2014-01-20 11:44:36 UTC
Created attachment 266719 [details] [review]
tracker-ioprio: Fix includes

I think this is the right fix.
Comment 7 Debarshi Ray 2014-01-20 11:49:56 UTC
Created attachment 266720 [details] [review]
tracker-ioprio, tracker-sched: Fix includes

... and tracker-sched also.
Comment 8 Martyn Russell 2014-01-20 12:13:19 UTC
Comment on attachment 266720 [details] [review]
tracker-ioprio, tracker-sched: Fix includes

Thanks for the patch rishi :)
Comment 9 Debarshi Ray 2014-01-20 12:34:15 UTC
It would be nice if someone with knowledge of FreeBSD could implement the non-Linux code paths in those files. Otherwise performance would be pretty dire with anything that uses Tracker.
Comment 10 Debarshi Ray 2014-01-21 08:46:43 UTC
*** Bug 722628 has been marked as a duplicate of this bug. ***