tracker-ioprio, tracker-sched: Fix includes

We need glib.h because of G_{BEGIN,END}_DECLS, and we do not need
tracker-log.h.

https://bugzilla.gnome.org/show_bug.cgi?id=722525