src/libtracker-common/tracker-sched.h
@@ -20,6 +20,8 @@
 #ifndef __LIBTRACKER_COMMON_SCHED_H__
 #define __LIBTRACKER_COMMON_SCHED_H__
 
+#include <glib.h>
+
 G_BEGIN_DECLS
 
 #if !defined (__LIBTRACKER_COMMON_INSIDE__) && !defined (TRACKER_COMPILATION)
